--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "got": "11.8.1",
+    "moment": "2.29.1",
+    "moment-timezone": "0.5.32",
     "ts-node": "9.1.1",
     "ts-node-dev": "1.1.1"
   },
