--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node-dev ./server.ts"
+    "build": "tsc",
+    "start": "npm run clean && npm run build && node ./dist/server.js",
+    "dev": "ts-node-dev ./server.ts",
+    "clean": "rm -rf ./dist/"
   },
   "author": "",
   "license": "ISC",
