--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "bookly-to-factuursturen-integration",
+  "name": "bookly-to-factuursturen-api",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.ts",
+  "description": "API to create invoices in Factuursturen.nl from Bookly appointments",
   "scripts": {
     "build": "tsc",
     "start": "npm run clean && npm run build && node ./dist/server.js",
@@ -10,20 +11,15 @@
   },
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
-    "date-fns": "2.16.1",
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "got": "11.8.1",
-    "moment": "2.29.1",
-    "moment-timezone": "0.5.32",
-    "ts-node": "9.1.1",
-    "ts-node-dev": "1.1.1"
+    "ts-node-dev": "1.1.1",
+    "typescript": "4.1.3"
   },
   "devDependencies": {
     "@types/express": "4.17.11",
-    "@types/got": "9.6.11",
-    "typescript": "4.1.3"
+    "@types/got": "9.6.11"
   }
 }
