--- a/package.json
+++ b/package.json
@@ -12,14 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "4.17.11",
+    "@types/got": "9.6.11",
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "got": "11.8.1",
     "ts-node-dev": "1.1.1",
     "typescript": "4.1.3"
-  },
-  "devDependencies": {
-    "@types/express": "4.17.11",
-    "@types/got": "9.6.11"
   }
 }
