--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@types/express": "4.17.11",
     "@types/got": "9.6.11",
+    "date-fns": "2.17.0",
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "got": "11.8.1",
